# CRT

./: README.md
Documents/: CRT_Mathematical Documentation.docx
source/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
source/packaging/linux/: CRT_EMULATOR.desktop.in  com.mechaml.crtemulator.appdata.xml
source/packaging/macos/: Info.plist.in  generate_icns.sh
source/packaging/windows/: OneFileLauncher.cs  app_icon.rc.in  build_onefile.ps1  generate_icon.ps1  run_portable.cmd
source/scripts/: build_unix.sh  build_windows.ps1
source/src/: app_resources.qrc  crtrenderer.cpp  crtrenderer.h  localization.h  main.cpp  mainwindow.cpp  mainwindow.h  physics.cpp  physics.h  telemetrypanel.cpp  telemetrypanel.h
